[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.0.0"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = ["macros", "offline", "migrate", "runtime-tokio-native-tls"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool", "sqlite_pool"]
